[tool.poetry]
name = "chatnice"
version = "0.1.0"
description = ""
authors = ["Gloria Macia <g.macia-munoz@lse.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.29.0"

[tool.poetry.group.dev.dependencies]
streamlit = "^1.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
